data/derived/sp14/progs/unify/prog0793.ml.out
Characters 79-81:
  | Sine (ex) -> sin(pi * eval (ex,x,y))
                     ^^
Error: This expression has type float but an expression was expected of type
         int
